[package]
name = "warp_test"
version = "0.1.0"
authors = ["Javier Arrieta <javier.arrieta@zalando.ie>"]
edition = "2018"
rust = "1.40"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"